--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,15 +30,20 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/eq"
+db.default.username=root
+db.default.password=""
+
+play.db.pool=hikaricp
+# play.db.pool=bonecp
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# play.evolutions.enabled=false
+play.evolutions.enabled=false
 
 # You can disable evolutions for a specific datasource if necessary
-# play.evolutions.db.default.enabled=false
+play.evolutions.db.default.enabled=true
+
+ebean.default = ["models.*"]
