Sample integration with mysql and mongo datasources

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -47,3 +47,12 @@ play.evolutions.enabled=false
 play.evolutions.db.default.enabled=true
 
 ebean.default = ["models.*"]
+
+# ReactiveMongo
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+mongodb.uri = "mongodb://localhost:27017/enduraquest"
+mongo-async-driver {
+  akka {
+    loglevel = DEBUG
+  }
+}
